# dockerscan

./: .gitignore  README.md  mermaid_code_diagram  pyproject.toml
dockerscan/: __init__.py  __main__.py  cli.py  filesystem.py  html_output.py  image_loader.py  logger.py  os_detector.py  package_scanner.py
dockerscan/agents/: base.py  false_positive_agent.py  orchestrator.py  recommendation_agent.py  risk_agent.py  runtime_agent.py  vulnerability_agent.py
dockerscan/config/: __init__.py  os_config_base.py  os_configs.py  os_packages.py
dockerscan/data_packagers/: __init__.py  get_data.py
dockerscan/data_packagers_checker/: __init__.py  get_data.py  osv_client.py  vulnerability_enrichment_service.py
dockerscan/image_scanner/: filesystem.py  image_scan_service.py  os_detector.py  package_scanner.py  package_usage.py  runtime_context.py
dockerscan/image_scanner/parsers/: __init__.py  apk.py  dpkg.py  rpm.py
dockerscan/parsers/: __init__.py  apk.py
dockerscan/reports/: html_output.py
