[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dockerscan"
version = "0.1.0"
description = "Docker image scanner MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dockerscan = "dockerscan.cli:main"

